rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__missing_right_curly_bracket.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_err(stringify! (missing_right_curly_bracket), \"if (a) { a = 2\")"
---
error: Expected ';'
  ┌─ missing_right_curly_bracket:1:14
  │
1 │ if (a) { a = 2
  │              ^ Expected ';'

error: Expected '}'
  ┌─ missing_right_curly_bracket:1:14
  │
1 │ if (a) { a = 2
  │              ^ Expected '}'
